# bequest

./: .gitignore  LICENSE  README.md  bequest.sh
bequest-cli/: Cargo.toml
bequest-cli/src/: main.rs
bequest/sources/: bequest.move
bequest/tests/: bequest_tests.move
contract/: Move.toml  publish.sh
contract/sources/: bequest.move
