[package]
name = "bequest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.8"
spinners = "4.1.1"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-config = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "main" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
move-core-types = { git = "https://github.com/MystenLabs/sui", branch = "main" }
